update readme and docker
